objects/L2I_Product_Attributes__c.object
<CustomObject>
    <description>Junction object to provide extended versions of products related to another entity, e.g. Offerability for a specific airframe (L2I_Aircraft_Type__c)</description>
    <fields>
        <fullName>L2I_Aircraft_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>L2I_Aircraft_Type__c.L2I_Type_Level__c</field>
                <operation>equals</operation>
                <value>Model</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>L2I_Aircraft_Type__c</referenceTo>
        <relationshipLabel>Extended Product Attributes (Aircraft Model)</relationshipLabel>
        <relationshipName>Extended_Product_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Type_Text__c</fullName>
        <formula>L2I_Aircraft_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Type Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Aircraft Type</inlineHelpText>
        <label>Aircraft Type</label>
        <referenceTo>L2I_Aircraft_Type__c</referenceTo>
        <relationshipLabel>Extended Product Attributess</relationshipLabel>
        <relationshipName>Extended_Product_Attributess_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_ExternalId_Oracle__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId_Oracle</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_ExternalId__c</fullName>
        <description>L2I_ExternalId is a combination of the keys to the Product2 (Inventory Item Id) and Aircraft_Type (Aircraft Type) field. The combination should be unique, else the record cannot be saved.</description>
        <externalId>true</externalId>
        <inlineHelpText>L2I_ExternalId is a combination of the keys to the Product2 (Inventory Item Id) and Aircraft_Type (Aircraft Type) field. The combination should be unique, else the record cannot be saved.</inlineHelpText>
        <label>ExternalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Offerable__c</fullName>
        <inlineHelpText>Product can be sold for this aircraft</inlineHelpText>
        <label>Offerable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Launched</fullName>
                </value>
                <value>
                    <fullName>Offerable</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
                <value>
                    <fullName>No Plan</fullName>
                </value>
                <value>
                    <fullName>Not Launched</fullName>
                </value>
                <value>
                    <fullName>Pending / In Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Product</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Extended Product Attributess</relationshipLabel>
        <relationshipName>Extended_Product_Attributess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_System_Type_s__c</fullName>
        <label>System Type(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_System_Type_On_Quote</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offerable__c</fullName>
        <inlineHelpText>Product can be sold for this aircraft</inlineHelpText>
        <label>Offerable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Launched</fullName>
                </value>
                <value>
                    <fullName>Offerable</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
                <value>
                    <fullName>No Plan</fullName>
                </value>
                <value>
                    <fullName>Not Launched</fullName>
                </value>
                <value>
                    <fullName>Pending / In Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMA_Date__c</fullName>
        <label>PMA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hasPMA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This product has PMA for this product</inlineHelpText>
        <label>PMA</label>
        <type>Checkbox</type>
    </fields>
    <label>Extended Product Attributes</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <nameField>
        <displayFormat>Att-{000000}</displayFormat>
        <label>Extended Product Attributes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extended Product Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>